--- a/src/main/resources/gui/shop/protective.yml
+++ b/src/main/resources/gui/shop/protective.yml
@@ -153,6 +153,8 @@ settings:
       - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have enough coins to buy the drone!'
     HAVE:
       - 'battledrones message {player} &7[&dBattleDrones&7] &cYou already have bought the drone!'
+    PERMISSION:
+      - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have access to buy this shield generator drone.'
   COST: 100
 21:
   NAME: '&6Healing drone'
@@ -173,6 +175,8 @@ settings:
       - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have enough coins to buy the drone!'
     HAVE:
       - 'battledrones message {player} &7[&dBattleDrones&7] &cYou already have bought the drone!'
+    PERMISSION:
+      - 'battledrones message {player} &7[&dBattleDrones&7] &cYou dont have access to buy this healing drone.'
   COST: 100
 22:
   NAME: ' '
