--- a/src/main/resources/drones/energy/laser.yml
+++ b/src/main/resources/drones/energy/laser.yml
@@ -80,15 +80,9 @@ default:
     hit-commands:
       - 'bd sound entity_guardian_death {world} {x} {y} {z} 1 2'
 
-    # Particle line
-    particle-line:
-      space: 0.4
-      amount: 3
-      size: 1
-      rgb:
-        r: 188
-        g: 31
-        b: 31
+    # Particles
+    particle:
+      1: laser
 
     # Every x amount of ammo used -1 health
     wear-and-tear: 12
@@ -134,14 +128,8 @@ default:
       delay: 12
     hit-commands:
       - 'bd sound entity_guardian_death {world} {x} {y} {z} 1 2'
-    particle-line:
-      space: 0.4
-      amount: 3
-      size: 1
-      rgb:
-        r: 188
-        g: 31
-        b: 31
+    particle:
+      1: laser
     wear-and-tear: 14
     run:
       player:
@@ -180,14 +168,8 @@ default:
       delay: 10
     hit-commands:
       - 'bd sound entity_guardian_death {world} {x} {y} {z} 1 2'
-    particle-line:
-      space: 0.4
-      amount: 3
-      size: 1
-      rgb:
-        r: 188
-        g: 31
-        b: 31
+    particle:
+      1: laser
     wear-and-tear: 18
     run:
       player:
