--- a/src/main/resources/drones/kinetic/machine_gun.yml
+++ b/src/main/resources/drones/kinetic/machine_gun.yml
@@ -78,15 +78,8 @@ default:
       - 'bd sound entity_guardian_death {world} {x} {y} {z} 1 2'
 
     # Particle line
-    particle-line:
-      space: 0.2
-      length: 0.8
-      amount: 3
-      size: 1
-      rgb:
-        r: 105
-        g: 105
-        b: 105
+    particle:
+      1: machine_gun
 
     # Every x amount of ammo used -1 health
     wear-and-tear: 15
@@ -131,15 +124,8 @@ default:
       delay: 12
     hit-commands:
       - 'bd sound entity_guardian_death {world} {x} {y} {z} 1 2'
-    particle-line:
-      space: 0.2
-      length: 0.8
-      amount: 3
-      size: 1
-      rgb:
-        r: 105
-        g: 105
-        b: 105
+    particle:
+      1: machine_gun
     wear-and-tear: 25
     run:
       player:
