--- a/src/main/resources/particles.yml
+++ b/src/main/resources/particles.yml
@@ -107,3 +107,16 @@ rocket-inside:
   y-offset: 0.7
   tick: 2
   delay: 7
+flamethrower:
+  type: line
+  particle: FLAME
+  space: 0.1
+  distance: 0.5
+  amount: 1
+  size: 1
+  rgb:
+    r: 0
+    g: 0
+    b: 0
+  y-offset: 0.4
+  delay: 0
