--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ name: ${project.name}
 author: MathiasMC
 description: ${project.description}
 api-version: 1.15
-softdepend: [PlaceholderAPI, WorldGuard, Vault]
+softdepend: [PlaceholderAPI, MVdWPlaceholderAPI, WorldGuard, Vault]
 commands:
   battledrones:
     description: BattleDrones main command
