--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -33,8 +33,40 @@ health-placeholder:
     color: '&c'
   amount: 20
 
+# Drone ammo in gui
+ammo:
+
+  ammo:
+    symbol: \u007c
+    color: '&2'
+
+  none:
+    symbol: \u007c
+    color: '&c'
+  amount: 20
+
+# Drone ammo placeholder
+ammo-placeholder:
+
+  ammo:
+    symbol: \u007c
+    color: '&2'
+
+  none:
+    symbol: \u007c
+    color: '&c'
+  amount: 20
+
 # WorldGuard support (disable attack in regions)
 worldguard: []
+
+# IridiumSkyblock support (allow only spawn in island)
+iridium-skyblock:
+  use: false
+  no-island:
+    - 'battledrones message {player} &7[&dBattleDrones&7] &cYou cannot spawn your drone, you are not on an island.'
+  island:
+    - 'battledrones message {player} &7[&dBattleDrones&7] &cYou cannot spawn your drone, you are not an member of this island.'
 
 # Better block check (disable shoot thru lava, water, this will impact performance)
 better-block-check: false
